--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>SSSpencer413</title>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
 </head>
 <body>
 <h1>This is a website.</h1>
+<p>That's it.</p>
 </body>
 </html>
