--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
 <title>SSSpencer413</title>
 <style>
-body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
+#desc  {background-color: powderblue;}
 </style>
 </head>
 <body>
-<h1>This is a website.</h1>
-<p>That's it.</p>
+
+<div id="desc">
+  <img class="SSSIcon" alt="The Server Bot's avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
+  <h1>SSSpencer413</h1>
+  <p>This is my website.  What else did you want?</p>
+</div>
+
 </body>
 </html>
+
