--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <title>SSSpencer413</title>
 <style>
 h1   {color: blue;}
-p    {color: red;}
+p    {color: red; font-family: arial;}
 #desc  {background-color: powderblue;}
+#info {margin-left: 37.5%;}
+#nameHead {margin-left: 40%;}
+#image {margin-left: 45%;}
 </style>
 </head>
 <body>
 
 <div id="desc">
-  <img class="SSSIcon" alt="The Server Bot's avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
-  <h1>SSSpencer413</h1>
-  <p>This is my website.  What else did you want?</p>
+    <img class="SSSIcon" id="image" alt="The Server Bot's avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
+    <h1 id="nameHead">SSSpencer413#4245</h1>
+    <p id="info">This is my website.  What else did you want?</p>
 </div>
-
 </body>
 </html>
-
