--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ p    {color: red; font-family: arial;}
 <body>
 
 <div id="desc">
-    <img class="SSSIcon" id="image" alt="The Server Bot's avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
+    <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
     <h1 id="nameHead">SSSpencer413#4245</h1>
     <p id="info">This is my website.  What else did you want?</p>
 </div>
