--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 h1   {color: blue;}
 p    {color: red; font-family: arial;}
-#desc  {background-color: powderblue;}
+body  {background-color: powderblue;}
 #info {margin-left: 37.5%;}
 #nameHead {margin-left: 40%;}
 #image {margin-left: 45%;}
@@ -18,5 +18,6 @@ p    {color: red; font-family: arial;}
     <h1 id="nameHead">SSSpencer413#4245</h1>
     <p id="info">This is my website.  What else did you want?</p>
 </div>
+
 </body>
 </html>
