--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SSSpencer413</title>
-<style>
-h1   {color: blue;}
-p    {color: red; font-family: arial;}
-body  {background-color: powderblue;}
-#info {margin-left: 37.5%;}
-#nameHead {margin-left: 40%;}
-#image {margin-left: 45%;}
-</style>
+    <title>SSSpencer413</title>
+    <style>
+        h1   {color: blue;}
+        p    {color: red; font-family: arial;}
+        body  {background-color: powderblue;}
+        #info {margin-left: 37.5%;}
+        #nameHead {margin-left: 40%;}
+        #image {margin-left: 45%;}
+    </style>
 </head>
 <body>
 
-<div id="desc">
-    <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
-    <h1 id="nameHead">SSSpencer413#4245</h1>
-    <p id="info">This is my website.  What else did you want?</p>
-</div>
-
+    <div id="desc">
+        <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
+        <h1 id="nameHead">SSSpencer413#4245</h1>
+        <p id="info">This is my website.  What else did you want?</p>
+    </div>
+    <p>Here's a list of my projects:</p>
+    <ul>
+        <li><a href = "/theserverbot.github.com">The Server Bot</a></li>
+    </ul>
 </body>
 </html>
