--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <p>Here's a list of my projects:</p>
     <ul>
-        <li><a href = "/theserverbot.github.com">The Server Bot</a></li>
+        <li><a href = "/theserverbot">The Server Bot</a></li>
     </ul>
 </body>
 </html>
