--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <title>SSSpencer413</title>
     <style>
-        h1   {color: blue;}
-        p    {color: red; font-family: arial;}
-        body  {background-color: powderblue;}
-        #info {margin-left: 37.5%;}
-        #nameHead {margin-left: 40%;}
+        h1   {color: black;}
+        p    {color: blue; font-family: arial;}
+        body  {background-color: #D3D3D3;}
+        #info {text-align: center;}
+        #nameHead {text-align: center;}
+        #projectList {background-color: powderblue;}
         #image {margin-left: 45%;}
     </style>
 </head>
@@ -18,9 +19,11 @@
         <h1 id="nameHead">SSSpencer413#4245</h1>
         <p id="info">This is my website.  What else did you want?</p>
     </div>
-    <p>Here's a list of my projects:</p>
-    <ul>
-        <li><a href = "/theserverbot">The Server Bot</a></li>
-    </ul>
+    <div id = "projectList">
+        <h2>Here's a list of my projects:</h2>
+        <ul>
+            <li><a href = "/theserverbot">The Server Bot</a></li>
+        </ul>
+    </div>
 </body>
 </html>
