--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body  {background-color: #D3D3D3;}
         #info {text-align: center;}
         #nameHead {text-align: center;}
-        #projectList {background-color: powderblue;}
+        #projectList {background-color: powderblue; text-align: center;}
         #image {margin-left: 45%;}
     </style>
 </head>
