--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="desc">
         <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
-        <h1 id="nameHead">SSSpencer413#4245</h1>
+        <h1 id="nameHead">SSSpencer413</h1>
         <p id="info">This is my website.  What else did you want?</p>
     </div>
     <div id = "projectList">
