--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         h1   {color: black;}
         p    {color: blue; font-family: arial;}
-        body  {background-color: #D3D3D3;}
+        body  {background-color: #EBF0F7;}
         #info {text-align: center;}
         #nameHead {text-align: center;}
         #projectList {background-color: powderblue; text-align: center;}
