--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div id="desc">
         <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
         <h1 id="nameHead">SSSpencer413</h1>
-        <p id="info">This is my website.  What else did you want?</p>
+        <p id="info">What are you doing here?  You must've made a mistake.</p>
     </div>
     <div id = "projectList">
-        <h2>Here's a list of my projects:</h2>
-        <ul>
+        <h2>Here's a list of my ebsites:</h2>
+        <ul style = "list-style-type: none;">
             <li><a href = "/theserverbot">The Server Bot</a></li>
         </ul>
     </div>
