--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>SSSpencer413</title>
     <style>
-        h1   {color: black;}
+        h1   {color: black; font-family: arial;}
         p    {color: blue; font-family: arial;}
         body  {background-color: #EBF0F7;}
         #info {text-align: center;}
