--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         #info {text-align: center;}
         #nameHead {text-align: center;}
         #projectList {background-color: powderblue; text-align: center;}
-        #image {margin-left: 45%;}
+        #image {text-align: center;}
     </style>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <p id="info">What are you doing here?  You must've made a mistake.</p>
     </div>
     <div id = "projectList">
-        <h2>Here's a list of my ebsites:</h2>
+        <h2>Here's a list of my websites:</h2>
         <ul style = "list-style-type: none;">
             <li><a href = "/theserverbot">The Server Bot</a></li>
         </ul>
