--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>SSSpencer413</title>
     <style>
         h1   {color: black; font-family: arial;}
+        h2   {color: red; font-family: arial;}
         p    {color: blue; font-family: arial;}
         body  {background-color: #EBF0F7;}
         #info {text-align: center;}
