--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         #info {text-align: center;}
         #nameHead {text-align: center;}
         #projectList {background-color: powderblue; text-align: center;}
-        #image {text-align: center;}
+        #image {margin-left: 45%}
     </style>
 </head>
 <body>
