--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>SSSpencer413</title>
     <style>
-        h1   {color: black; font-family: arial;}
-        h2   {color: red; font-family: arial;}
-        p    {color: blue; font-family: arial;}
+        h1   {font-family: arial;}
+        h2   {font-family: arial;}
+        p    {font-family: arial;}
         body  {background-color: #EBF0F7;}
         #info {text-align: center;}
         #nameHead {text-align: center;}
@@ -18,7 +18,7 @@
     <div id="desc">
         <img class="SSSIcon" id="image" alt="My avatar" src="https://images.discordapp.net/avatars/180803410306662401/1036950e68d44c862929c59843baac1e.png?size=512" width="128px" height="128px" style="margin-top:80px;border-radius:50%;">
         <h1 id="nameHead">SSSpencer413</h1>
-        <p id="info">What are you doing here?  You must've made a mistake.</p>
+        <p id="info">Welcome to my website.  Now get out.</p>
     </div>
     <div id = "projectList">
         <h2>Here's a list of my websites:</h2>
